--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
 </head>
 <body>
-  <div class="container">
-    <p class="title">Advice #117</p>
-    <p class="advice">It is easy to sit up and take notice, what's difficult is getting up and taking action </p>
+  <div class="container" id="container">
+    <p class="title">Advice #<span id="adviceId">117</span></p>
+    <p class="advice" id="advicetext">"It is easy to sit up and take notice, what's difficult is getting up and taking action" </p>
     <img src="images/pattern-divider-desktop.svg" alt="" class="divider">
-   <div><button class="btn"><img src="./images/icon-dice.svg" alt=""></button></div>
+   <div><button class="btn" id="btn"><img src="./images/icon-dice.svg" alt=""></button></div>
   </div>
 
-
+  <script src="script.js"></script>
 </body>
 </html>
